# slog

./: README.md
.github/ISSUE_TEMPLATE/: custom.md
cmake/: CMakeLists.basic.txt  CMakeLists.minimal.txt
cpp/condition/: CMakeLists.txt  cpp-condition.cpp
cpp/cpp20/: CMakeLists.txt  README.md  cpp20_bit.cpp  cpp20_compare.cpp  cpp20_coroutine.cpp  cpp20_enum.cpp  cpp20_for.cpp  cpp20_format.cpp  cpp20_lambda.cpp  cpp20_span.cpp
cpp/prod-con/: CMakeLists.txt  prodcon.cpp
ebpf/: .gitignore
ebpf/hello/: hello-bpf.py
ebpf/helloworld_perf/: .gitignore  README.md  perf_sample.bpf.c  perf_sample.c
ebpf/rlimit-example/: CLAUDE.md  CMakeLists.txt  exec.bpf.c  exec.c
ebpf/vfio-mmap/: CMakeLists.txt  iommu_domain_mmap.bpf.c  iommu_mmap_trace.bpf.c  loader_domain.c  loader_mmap.c
endian/: Makefile  test.c
fapi/: CallBack.cpp  CallBack.h  CallBackHandler.cpp  CallBackHandler.cpp.keep  CallBackHandler.h  CallBackManager.cpp  CallBackManager.h  FAPIDefs.h  NPF_F_ATM_CONFIGURATION_MANAGER.c  TableManager.cpp  TableManager.h  TraceMacro.h
golang/bridge/: bridge.go  go.mod
golang/viper/: config.yaml  go.mod  main.go
golang/yaml/: example.yaml  go.mod  go.sum  parser.go
lfsr/: lfsr.ipynb
mytime/: README.md  mytime.py  setup.py
mytime/examples/: 2023-10-16.md  2023-10-20.md
mytime/tests/: test_mytime.py
ruby/cuckoo_hash/: cuckoo.rb
rust/: README.md
rust-flags/src/: lib.rs
rust/bitfields/: Cargo.toml  README.md
rust/bitfields/src/: lib.rs
rust/cfgparse/: Cargo.toml
rust/cfgparse/src/: main.rs
rust/custom-error/: Cargo.toml
rust/custom-error/src/: main.rs
rust/devmem/: Cargo.toml  README.md
rust/devmem/examples/: basic_usage.rs
rust/devmem/src/: lib.rs  main.rs
rust/mydns/: Cargo.toml
rust/mydns/src/: main.rs
rust/mytar/: Cargo.toml  README.md  files.tar
rust/mytar/src/: main.rs
rust/mytar/test/: file3.txt
rust/pcap-reader/: Cargo.toml  README.md
rust/pcap-reader/src/: main.rs
rust/pkt-parsing/: Cargo.toml
rust/pkt-parsing/src/: main.rs
rust/prodcon/: .gitignore  Cargo.toml  README.md
rust/psp-packet/: Cargo.toml
rust/psp-packet/src/: main.rs
rust/psp-packet/src/packet/: mod.rs  psp.rs
rust/rust-flags/: Cargo.toml  README.md
rust/rust-flags/src/: lib.rs
rust/shake-xof/: Cargo.toml
rust/shake-xof/src/: main.rs
rust/splitter/: Cargo.toml
rust/splitter/src/: lib.rs
rust/struct-align/: Cargo.toml
rust/struct-align/src/: main.rs
rust/watcher/: Cargo.toml
rust/watcher/src/: main.rs
