[package]
name = "cfgparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
clap_logger = "0.3.3"
env_logger = "0.10.1"
hex = "0.4.3"
log = "0.4.20"
serde = {version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.2.0"
